--- a/prep-css-layout-classes/index.html
+++ b/prep-css-layout-classes/index.html
@@ -43,29 +43,20 @@ img { width: 100%; }
 <h1>Indiana Jones</h1>
 <div class="container">
   <div class="row">
-    <div class="column"><img src="images/raiders.jpg" alt="raiders of the lost ark"></div>
-
-        <div class="column"><img src="images/temple.jpg" alt="tempe of doom"></div>
-            <div class="column"><img src="images/crusade.jpg"></div>
-  </div>
-</div>
-
-<div class="container">
-  <div class="row">
-    <div class="column"><h3>Raiders of the Lost Ark</h3><p>Raiders of the Lost Ark[a] is a 1981 American action-adventure film directed by Steven Spielberg and written by Lawrence
+    <div class="column"><img src="images/raiders.jpg" alt="raiders of the lost ark"><h3>Raiders of the Lost Ark</h3><p>Raiders of the Lost Ark[a] is a 1981 American action-adventure film directed by Steven Spielberg and written by Lawrence
     Kasdan, based on a story by George Lucas and Philip Kaufman. It stars Harrison Ford, Karen Allen, Paul Freeman, Ronald
     Lacey, John Rhys-Davies, and Denholm Elliott. Ford portrays Indiana Jones, a globe-trotting archaeologist vying with
     Nazi German forces in 1936 to recover the long-lost Ark of the Covenant, a relic said to make an army invincible.
     Teaming up with his tough former lover Marion Ravenwood (Allen), Jones races to stop rival archaeologist Dr. René Belloq
     (Freeman) from guiding the Nazis to the Ark and its power.</p></div>
 
-    <div class="column"><h3>Temple of Doom</h3><p>Indiana Jones and the Temple of Doom is a 1984 American action-adventure film directed by Steven Spielberg. It is the
+        <div class="column"><img src="images/temple.jpg" alt="tempe of doom"><h3>Temple of Doom</h3><p>Indiana Jones and the Temple of Doom is a 1984 American action-adventure film directed by Steven Spielberg. It is the
     second installment in the Indiana Jones franchise, a prequel to the 1981 film Raiders of the Lost Ark, featuring
     Harrison Ford reprising his role as the title character and the second film to use THX technology after Return of the
     Jedi. After arriving in India, Indiana Jones is asked by desperate villagers to find a mystical stone and rescue their
     children from a Thuggee cult practicing child slavery, black magic, and ritualistic human sacrifice in honor of the
-    goddess, Kali.</p></div>
-    <div class="column"><h3>The Last Crusade</h3><p>Indiana Jones and the Last Crusade is a 1989 American action-adventure film directed by Steven Spielberg, from a story
+    goddess, Kali.</p><</div>
+            <div class="column"><img src="images/crusade.jpg"><h3>The Last Crusade</h3><p>Indiana Jones and the Last Crusade is a 1989 American action-adventure film directed by Steven Spielberg, from a story
     co-written by executive producer George Lucas. It is the third installment in the Indiana Jones franchise and a sequel
     to Raiders of the Lost Ark. Harrison Ford returned in the title role, while his father is portrayed by Sean Connery.
     Other cast members featured include Alison Doody, Denholm Elliott, Julian Glover, River Phoenix, and John Rhys-Davies.
@@ -73,6 +64,7 @@ img { width: 100%; }
     while on a journey to find the Holy Grail.</p></div>
   </div>
 </div>
+
 
 
 </body>
