prep-javascript-variables- Jay Park
updated the changes

--- a/prep-javascript-variables/index.html
+++ b/prep-javascript-variables/index.html
@@ -10,11 +10,11 @@
   <script>
     const fullName = 'Jay Park';
     console.log('value of fullName:', fullName);
-    const numberOfPets = '0';
+    const numberOfPets = 0;
     console.log('value of numberOfPets:', numberOfPets);
-    const likesVegetables = 'true';
+    const likesVegetables = true;
     console.log('value of likesVegetables:', likesVegetables);
-    const nothing = 'null';
+    const nothing = null;
     console.log('value of nothing:', nothing);
     var never;
     console.log('value of never:', never);
